--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.3",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
+    "crypto-js": "^4.1.1",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
     "next": "13.4.3",
