--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-spinners": "^0.13.8",
+    "react-star-ratings": "^2.3.0",
     "tailwindcss": "3.3.2"
   }
 }
